# paper2remarkable

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  p2r.1  pyproject.toml
docs/: Makefile
paper2remarkable/: __main__.py  __version__.py
paper2remarkable/providers/: html.py
